--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "axios": "^1.12.2",
     "next": "14.2.32",
     "primeflex": "^4.0.0",
@@ -16,7 +17,9 @@
     "primereact": "^10.9.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-transition-group": "^4.4.5"
+    "react-hook-form": "^7.62.0",
+    "react-transition-group": "^4.4.5",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@types/node": "^20",
